--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </svg>
         </button>
 
-        <!-- Modal -->
-        <div id="modal" class="modal hidden">
+        <!-- Modal - STARTS HIDDEN -->
+        <div id="modal" class="modal modal-hidden">
             <div class="modal-content">
                 <h2>Add New Event</h2>
                 <form id="eventForm">
